NO-JIRA: Fixed contrast styling of paths image on index page.

--- a/src/documents/css/idg.css.styl
+++ b/src/documents/css/idg.css.styl
@@ -227,7 +227,6 @@ setNavTab(inputColor) {
 }
 
 .idg-tabs {
-
     ul {
         display: flex;
         flex-wrap: wrap;
@@ -425,22 +424,22 @@ contrast-theme(foregroundColor, backgroundColor) {
     }
 
     .docs-template-category-active {
-        
+
         span {
             border-color: backgroundColor !important;
             background-color: backgroundColor !important;
             color: foregroundColor !important;
             border-bottom: 0.2rem solid backgroundColor !important;
         }
-        
+
         svg {
             fill: foregroundColor;
             background-color: backgroundColor !important;
         }
     }
-    
+
     .docs-template-topics-active {
-          border-left: 0.3rem solid foregroundColor; 
+          border-left: 0.3rem solid foregroundColor;
         }
 
     .idg-iconPractices svg,
@@ -450,7 +449,7 @@ contrast-theme(foregroundColor, backgroundColor) {
         fill: foregroundColor;
     }
 
-    #guidelines-path path {
+    #idg-path-image path {
         stroke: foregroundColor;
         fill: backgroundColor;
     }
